--- a/src/index.css
+++ b/src/index.css
@@ -42,18 +42,11 @@ body {
   align-items: center;
 }
 
-
-
 .header__logo {
   font-size: 30px;
   font-weight: 700;
   color: rgb(32, 75, 69);
 }
-
-/*.header__search{
- 
-}
-*/
 
 .header__button{
   padding: 0.375rem 0.75rem;
@@ -315,10 +308,9 @@ body {
 #chartTinyBarsituationInCity,
 #chartPiesituationInCity {
   width: 100%;
-  height: 100%;
+  height: 50%;
   display: block;
 }
-
 
 @media (max-width: 700px) {
   .containermapAndgraphics {
@@ -358,14 +350,12 @@ body {
   height: 20%;
 }
 
-.containercharts__registerCasesAdeaths_byAgeSex
-{
+.containercharts__registerCasesAdeaths_byAgeSex{
   display: flex;
   width: 100%;
   max-width: 90%;
   margin: 0 auto;
   flex-direction: row;
-
 }
 
 #charts__registerCasesAdeaths_byAgeWoman{
@@ -382,7 +372,6 @@ body {
 
 .charts_vaccine{
   height: 10%;
-    width: 100%;
-  height: 200px;
+  width: 100%;  
   background-color: rgb(60, 144, 223);
 }
