--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ body {
 .charts {
   width: 55%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 20px;
   padding: 10px 5px;
   box-sizing: border-box;
@@ -302,15 +302,18 @@ body {
   width: 100%;  
   height: 50%;
   display: flex;
+  flex-direction: row;
   flex-grow: 1;
 }
 
-#chartTinyBarsituationInCity,
-#chartPiesituationInCity {
-  width: 100%;
-  height: 50%;
-  display: block;
+#chartTinyBarsituationInCity {
+  width: 65%;
 }
+
+#chartPiesituationInCity{
+  width: 35%;
+}
+
 
 @media (max-width: 700px) {
   .containermapAndgraphics {
@@ -327,20 +330,10 @@ body {
     display: flex;
     flex-direction: column;
   }
-}
 
-@media (min-width: 700px) {
   #charts_situationInCity {
     display: flex;
-    flex-direction: row;
-  }
-  
-  #chartTinyBarsituationInCity {
-    width: 65%;
-  }
-  
-  #chartPiesituationInCity{
-    width: 35%;
+    flex-direction: column;
   }
 }
 
