--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,24 @@ body {
 }
 
 
+.logo {
+  flex-shrink: 1;
+  width: 300px;
+  height: 77px;
+}
 
+.logo object {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#facebook, 
+#instagram,
+#telegram,
+#whatsapp{
+width: 25px;
+height: 25px;
+}
 
 /* Statistics*/
 .statics{
