normal icons appeared on the site. When you clicked on the area on the map, a window appeared (the code was not made)

--- a/public/socialLogo/logo.css
+++ b/public/socialLogo/logo.css
@@ -1,5 +1,6 @@
 #facebook, #instagram, #telegram, #whatsapp{
     fill: #4A7B39;
+    transition: fill 0.3s ease;
 }
 
 #facebook:hover, #instagram:hover, #telegram:hover, #whatsapp:hover{
